# datasource-to-dataset-pipeline

./: pyproject.toml
program/app/: main.py
program/base_modules/: base_executor.py
program/base_modules/models/: d2d_pipeline.py
program/base_modules/models/datasources/: datasources.py  prometheus.py
program/config_templates/: d2d_pipeline_sample.yaml  global_config.yaml
program/config_templates/datasources/: loki_sample.yaml  mimir_sample.yaml  prometheus_sample.yaml  tempo_sample.yaml
program/processor/: processor.py
program/processor/executors/datasources/: executor.py  prometheus.py  prometheus_executor.py
program/processor/executors/exporter/: executor.py
program/processor/executors/exporter/exporters/: csv_exporter.py  json_exporter.py
program/test_suits/: global_test_config.py  test_config_load_and_validation.py  test_datasource_executor.py  test_prometheus_d_source_executor.py
program/test_suits/kind_config/: inital-setup.sh
program/test_suits/test_configs/: test_config.yaml
program/test_suits/test_configs/datasources/: sandbox-prometheus.yaml
sandbox/: host-setup.sh  inital-setup.sh  setup-all.sh
sandbox/helm-values/: telepresence-values.yaml
